--- a/utils/watcher/frontend/style.css
+++ b/utils/watcher/frontend/style.css
@@ -1,7 +1,51 @@
 body {
-  background: #eceff1;
+  background: #ddd;
   color: rgba(0, 0, 0, 0.87);
   font-family: Roboto, Helvetica, Arial, sans-serif;
   margin: 0;
   padding: 0;
+}
+
+table {
+  background-color: #eee;
+}
+
+td {
+  padding: 16px;
+  font-size: xx-large;
+  text-align: center;
+  min-width: 150px;
+  min-height: 130px;
+}
+
+tr > td:first-child {
+  opacity: 0.5;
+}
+tr:first-child > td {
+  opacity: 0.5;
+}
+
+.footer td {
+  border-top: 1px solid grey;
+}
+.footer .total {
+  font-size: 50px;
+}
+
+.score .highest {
+  opacity: 1;
+  background-color: #f8f8f8;
+  border-radius: 33%;
+}
+.score .max {
+  opacity: 0.7;
+  padding: 8px;
+}
+.score .last {
+  opacity: 0.6;
+  font-size: medium;
+  margin-top: 4px;
+}
+.score .hidden {
+  visibility: collapse;
 }
